# mosaic

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  package.json  rust-toolchain.toml  vision.md
.github/workflows/: ci.yml
crates/dither/: Cargo.toml
crates/dither/src/: lib.rs
crates/glyph-atlas/: Cargo.toml
crates/glyph-atlas/src/: lib.rs
crates/mosaic-compose/: Cargo.toml
crates/mosaic-compose/src/: lib.rs
crates/mosaic-compose/tests/: declarative.rs
crates/mosaic-core/: Cargo.toml
crates/mosaic-core/src/: lib.rs
crates/mosaic-dsl/: Cargo.toml
crates/mosaic-dsl/src/: lib.rs
crates/mosaic-runtime/: Cargo.toml
crates/mosaic-runtime/examples/: emit_golden.rs
crates/mosaic-runtime/src/: lib.rs
crates/mosaic-runtime/tests/: dsl.rs  facet_interp.wasm  interp.rs
crates/mosaic-vm/: Cargo.toml
crates/mosaic-vm/src/: lib.rs
crates/mosaic-wasm/: Cargo.toml
crates/mosaic-wasm/examples/: emit_composite_golden.rs
crates/mosaic-wasm/src/: lib.rs
crates/mosaic-wasm/test/: composite.test.ts  composite_golden.json  pipeline.test.ts  render_golden.json  spectral.test.ts  spectral_golden.json
crates/mosaic-wasm/tests/: composite.rs
crates/tessera-ascii/: Cargo.toml
crates/tessera-ascii/examples/: demo.rs  emit_render_golden.rs  sandboxed.rs
crates/tessera-ascii/src/: lib.rs
crates/tessera-ascii/tests/: facet_dither.wasm  facet_ramp.wasm  facet_structural.wasm  sandboxed_dither.rs  sandboxed_facet.rs  sandboxed_structural.rs
crates/tessera-spectral/: Cargo.toml
crates/tessera-spectral/examples/: emit_spectral_golden.rs
crates/tessera-spectral/src/: lib.rs
crates/tessera-spectral/tests/: sandboxed_spectral.rs
docs/: architecture.md
facets/dither/: Cargo.toml
facets/dither/src/: lib.rs
facets/interp/: Cargo.toml
facets/interp/src/: lib.rs
facets/liar/: Cargo.toml
facets/liar/src/: lib.rs
facets/ramp/: Cargo.toml
facets/ramp/src/: lib.rs
facets/spin/: Cargo.toml
facets/spin/src/: lib.rs
facets/structural/: Cargo.toml
facets/structural/src/: lib.rs
scripts/: verify-fixtures.sh
