# Mosaic — Rust workspace.
# Each Tessera engine and the runtime live here as crates, compiled natively
# (server) and to wasm32 (browser live-preview) from the same source.
[workspace]
resolver = "3"
members = [
    "crates/mosaic-core",
    "crates/glyph-atlas",
    "crates/tessera-ascii",
    "crates/mosaic-runtime",
    "crates/mosaic-wasm",
]
# Facets compile to wasm32 only (no_std, guest ABI), so they are excluded from the
# native workspace build and built explicitly with --target wasm32-unknown-unknown.
exclude = ["facets/ramp", "facets/spin", "facets/liar", "facets/structural"]

[workspace.package]
edition = "2024"
rust-version = "1.97"

[workspace.dependencies]
# Shared dependency versions are declared here as the workspace grows, so every
# crate pins the same version of each dependency.
