[package]
name = "glyph-atlas"
version = "0.0.0"
# Self-contained (not workspace-inherited) so the excluded, wasm-only Facet crates
# can build it as a path dependency from outside the workspace.
edition = "2024"
rust-version = "1.97"
description = "Shared no_std glyph atlas + SSD sub-cell matcher for the ASCII engine's L2 structural method. Used identically by the native engine and the wasm Facet, so there is no drift."
publish = false

[dependencies]
