[package]
name = "mosaic-runtime"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Mosaic's safe WASM host: executes pure, metered, sandboxed Facets."
publish = false

[dependencies]
wasmtime = "47"
anyhow = "1"
# Safe zero-copy f32<->u8 reinterpret for the little-endian marshalling fast path
# (keeps #![forbid(unsafe_code)]); the big-endian fallback uses to_le_bytes.
bytemuck = "1"

[dev-dependencies]
# The bytecode VM, as the host reference the sandboxed interpreter Facet is checked
# against in the run_program integration test.
mosaic-vm = { path = "../mosaic-vm" }
