[package]
name = "mosaic-wasm"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "wasm-bindgen browser bindings for the Mosaic engine: extract features + compose tokens, the same Rust the server runs."
publish = false

[lib]
# cdylib for the wasm32 artifact (wasm-pack); rlib so the workspace can build and
# lint it natively too.
crate-type = ["cdylib", "rlib"]

[dependencies]
tessera-ascii = { path = "../tessera-ascii" }
# The second engine, compiled to the same wasm32 bridge so audio features extract in
# the browser exactly as on the server (preview == render for the spectral engine too).
tessera-spectral = { path = "../tessera-spectral" }
wasm-bindgen = "0.2"
# Zero-copy Float32Array view of the feature buffer (avoids cloning it on read).
js-sys = "0.3"
